samples/_failures_safe/1761798884_1dafff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2d2134df.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_2d2134df.c:179:9: error: expected declaration or statement at end of input
  179 |         case TOKEN_OPERATOR:
      |         ^~~~
./samples/SAFE/__tmp_2d2134df.c:179:9: error: expected declaration or statement at end of input
